--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@prisma-cms/connector",
   "version": "1.0.0",
   "description": "Connector for @prisma-cms",
-  "main": "src/index.js",
+  "main": "lib/index.js",
   "module": "es/index.js",
   "files": [
     "es",
@@ -19,7 +19,15 @@
   },
   "dependencies": {},
   "devDependencies": {
-    "nwb": "0.23.x"
+    "@prisma-cms/front": "^1.3.3-beta",
+    "babel-plugin-transform-class-properties": "^6.11.5",
+    "babel-plugin-transform-runtime": "^6.12.0",
+    "babel-preset-env": "^1.7.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
+    "graphql-tag": "^2.10.0",
+    "nwb": "0.23.x",
+    "react-apollo": "^2.2.4"
   },
   "author": "Fi1osof",
   "homepage": "https://github.com/prisma-cms/connector#readme",
